--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <!-- Natalia Danylovych -->
     <!-- Olena Kalamuniak-->
     <!-- Oleksii Ostapiuk -->
     <!--Olena Tarasova -->
