--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     </header>
 
     <main>
+        <section class="master-coffe-making">
+            <div class="masrer_making_img">
+                <img width="300px" src="img/MasterCoffeeMaking.png" alt="">
+            </div>
+            <div class="column__making-coffee">
+                <p>About</p>
+                <h1>Master Coffee Making</h1>
+                <p>At our school, you'll learn all coffee secrets.</p>
+                <p>Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
+            </div>
+            <div class="column_making-learn-more">
+                <h2>PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h2>
+                <hr>
+                <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn even more about this hot and energizing drink</p>
+                <a href="#" class="btn_making_learn_more">Learn More</a>
+            </div>
+
+        </section>
 
     </main>
 
