--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="column_making-learn-more">
                 <h2>PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h2>
-                <hr>
+                <hr width="35px">
                 <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
                     even more about this hot and energizing drink</p>
