--- a/index.html
+++ b/index.html
@@ -36,13 +36,47 @@
             </div>
         </section>
 
+        <!-- Olena Kalamuniak-->
+        <section class="our_fav_coffee_recipes">
+            <div class="recipes">
+                <p>Recipes</p>
+                <h2>OUR FAVORITE COFFEE RECIPES</h2>
+
+                <p class="recipes__proposal">Want to try something new? Explore our coffee and dessert recipes.</p>
+
+                <div class="recipes__info">
+                    <p>The coffee-making industry is constantly evolving, and baristas come up with new recipes.</p>
+                    <p>If you are bored with classic lattes and cappuccinos, browse this section.</p>
+                </div>
+            </div>
+
+            <div class="photo_coffee">
+                <div class="Cold_Latte">
+                    <img src="img/photo_coffe_background.png" width="300px" height="300px" alt="">
+                    <h4>COLD LATTE</h4>
+                    <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk, syrup,
+                        and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix into
+                        glasses and decorate the glass with whipped cream.</p>
+                    <a href="#" class="button_cold_latte_open">Open</a>
+                </div>
+                <div class="Cheese_Dessert">
+                    <img src="img/photo_cheese_desert.jpg" width="300px" height="300px" alt="">
+                    <h4>CHESSE DESSERT</h4>
+                    <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it down. Put
+                        cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them to the
+                        cheese-coffee bowl. Then, mix it and serve on small plates.</p>
+                    <a href="#" class="button_cheese_dessert_open">Open</a>
+                </div>
+            </div>
+
+        </section>
     </main>
 
     <footer>
 
     </footer>
     <!-- Harasym Nazar-->
-    <!-- Olena Kalamuniak-->
+
     <!-- Oleksii Ostapiuk -->
     <!--Olena Tarasova -->
     <!-- Tetyana Pasecnhyk-->
