chanhes plus section remember_this

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <!-- Olena Kalamuniak-->
         <section class="our_fav_coffee_recipes">
+            <img src="img/white-cloud-remember-this.svg" alt="">
             <div class="recipes">
                 <p>Recipes</p>
                 <h2>OUR FAVORITE COFFEE RECIPES</h2>
@@ -52,7 +53,7 @@
 
             <div class="photo_coffee">
                 <div class="Cold_Latte">
-                    <img src="img/photo_coffe_background.png" width="300px" height="300px" alt="">
+                    <img src="img/photo_coffe_background.png" width="300" height="300" alt="">
                     <h4>COLD LATTE</h4>
                     <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk, syrup,
                         and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix into
@@ -60,7 +61,7 @@
                     <a href="#" class="button_cold_latte_open">Open</a>
                 </div>
                 <div class="Cheese_Dessert">
-                    <img src="img/photo_cheese_desert.jpg" width="300px" height="300px" alt="">
+                    <img src="img/photo_cheese_desert.jpg" width="300" height="300" alt="">
                     <h4>CHESSE DESSERT</h4>
                     <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it down. Put
                         cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them to the
@@ -68,7 +69,43 @@
                     <a href="#" class="button_cheese_dessert_open">Open</a>
                 </div>
             </div>
+            <img src="img/top-white-cloud-rt.svg" alt="">
+        </section>
 
+
+        <!--Olena Tarasova -->
+
+
+
+        <section class="remember_this">
+            <img src="img/white-cloud-remember-this.svg" alt="">
+            <div class="remember_this__features">
+                <p>Features</p>
+                <h2>REMEMBER THIS</h2>
+                <p class="few_things">A few things you should know about coffee making.</p>
+                <div class="coffe_making">
+                    <img src="img/logo_coffee_maker.svg" width="30" alt="">
+                    <div class="coffe_maker_text">
+                        <h4>PROFESSIONAL EQUIPMENT</h4>
+                        <p>Without a good espresso machine, you won't get delicious coffee.</p>
+                    </div>
+                </div>
+                <div class="experienced_barista">
+                    <img src="img/experienced_barista.svg" width="30" alt="">
+                    <div class="experienced_barista_text">
+                        <h4>EXPERIENCED BARISTAS</h4>
+                        <p>The ability to make truly delicious coffee comes with experience and hours of training.</p>
+                    </div>
+                </div>
+                <div class="classic_drinks">
+                    <img src="img/classic_drinks.svg" width="30" alt="">
+                    <div class="classic_drinks_texr">
+                        <h4>CLASSIC DRINKD ARE THE BASIS</h4>
+                        <p>First, you should learn how to make good espresso and then continue with other drinks.</p>
+                    </div>
+                </div>
+            </div>
+            <img class="remember_this__two-big-photos" src="img/remember_this__two-big-photos.png" width="500" alt="">
         </section>
     </main>
 
