add section video

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making">
             <div class="masrer_making_img">
-                <img width="300px" src="img/MasterCoffeeMaking.png" alt="">
+                <img width="300" src="img/MasterCoffeeMaking.png" alt="">
             </div>
             <div class="column__making-coffee">
                 <p>About</p>
@@ -33,6 +33,13 @@
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
                     even more about this hot and energizing drink</p>
                 <a href="#" class="btn_making_learn_more">Learn More</a>
+            </div>
+        </section>
+        <section class="video">
+            <div class="video_make-coffee">
+                <p class="video_logo">Video</p>
+                <h2 class="video__text">HERE'S HOW WE STUDY AND MAKE COFFEE</h2>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 96 96" x="0px" y="0px" style="max-width:70px"><path d="M38 68.476c-0.328 0-0.652-0.080-0.948-0.244-0.648-0.34-1.052-1.020-1.052-1.756v-36.952c0-0.736 0.404-1.416 1.052-1.752 0.644-0.352 1.432-0.32 2.048 0.088l28 18.476c0.56 0.368 0.9 0.992 0.9 1.664s-0.336 1.304-0.9 1.672l-28 18.476c-0.332 0.22-0.716 0.328-1.1 0.328zM40 33.244v29.524l22.368-14.756-22.368-14.768z" fill="currentColor" style=""></path><path d="M48 4c24.256 0 44 19.744 44 44s-19.744 44-44 44c-24.26 0-44-19.744-44-44s19.74-44 44-44zM48 0c-26.508 0-48 21.492-48 48s21.492 48 48 48 48-21.492 48-48-21.492-48-48-48v0z" fill="currentColor" style=""></path></svg>
             </div>
         </section>
 
