Added section about course

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
             <div class="video_make-coffee">
                 <p class="video_logo">Video</p>
                 <h2 class="video__text">HERE'S HOW WE STUDY AND MAKE COFFEE</h2>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 96 96" x="0px" y="0px" style="max-width:70px"><path d="M38 68.476c-0.328 0-0.652-0.080-0.948-0.244-0.648-0.34-1.052-1.020-1.052-1.756v-36.952c0-0.736 0.404-1.416 1.052-1.752 0.644-0.352 1.432-0.32 2.048 0.088l28 18.476c0.56 0.368 0.9 0.992 0.9 1.664s-0.336 1.304-0.9 1.672l-28 18.476c-0.332 0.22-0.716 0.328-1.1 0.328zM40 33.244v29.524l22.368-14.756-22.368-14.768z" fill="currentColor" style=""></path><path d="M48 4c24.256 0 44 19.744 44 44s-19.744 44-44 44c-24.26 0-44-19.744-44-44s19.74-44 44-44zM48 0c-26.508 0-48 21.492-48 48s21.492 48 48 48 48-21.492 48-48-21.492-48-48-48v0z" fill="currentColor" style=""></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                    viewBox="0 0 96 96" x="0px" y="0px" style="max-width:70px">
+                    <path
+                        d="M38 68.476c-0.328 0-0.652-0.080-0.948-0.244-0.648-0.34-1.052-1.020-1.052-1.756v-36.952c0-0.736 0.404-1.416 1.052-1.752 0.644-0.352 1.432-0.32 2.048 0.088l28 18.476c0.56 0.368 0.9 0.992 0.9 1.664s-0.336 1.304-0.9 1.672l-28 18.476c-0.332 0.22-0.716 0.328-1.1 0.328zM40 33.244v29.524l22.368-14.756-22.368-14.768z"
+                        fill="currentColor" style=""></path>
+                    <path
+                        d="M48 4c24.256 0 44 19.744 44 44s-19.744 44-44 44c-24.26 0-44-19.744-44-44s19.74-44 44-44zM48 0c-26.508 0-48 21.492-48 48s21.492 48 48 48 48-21.492 48-48-21.492-48-48-48v0z"
+                        fill="currentColor" style=""></path>
+                </svg>
             </div>
         </section>
 
@@ -124,6 +132,46 @@
     <!-- Oleksii Ostapiuk -->
     <!--Olena Tarasova -->
     <!-- Tetyana Pasecnhyk-->
+    <section class="about-our-courses">
+        <div>
+            <p>FAO</p>
+            <h2>ABOUT OUR COURSES</h2>
+            <hr>
+            <p>We run our courses approximately once in 2-3 months, so be sure to apply in advance.</p>
+            <p>Our groups consist of 5-10 people on average. Most courses are held offline or online + offline. If you
+                have any questions, please read this section or contact us directly.</p>
+        </div>
+        <div class="btn_choice">
+            <a href="#" class="btn_select_course">Select a Course</a>
+            <a href="#" class="btn_contact">Contact Us</a>
+        </div>
+        <div class="info__about__course">
+            <div class="accordion__about">
+                <h3>WHO ARE THESE COURSES FOR?</h3>
+                <p>We have different courses designed for beginners and professionals. It all depends on your skills and
+                    needs.</p>
+            </div>
+            <hr>
+            <div class="accordion__about">
+                <h3>DO I NEED TO BUY AN ESPRESSO MACHINE TO STUDY?</h3>
+                <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still, during the
+                    courses, you'll use our equipment, so you don't need to buy anything to study.</p>
+            </div>
+            <hr>
+            <div class="accordion__about">
+                <h3>DO YOU TEACH NEW WAYS OF BREWING COFFEE?</h3>
+                <p>Yes, you can master new techniques of brewing on our Advanced Barista Course.</p>
+            </div>
+            <hr>
+            <div class="accordion__about">
+                <h3>WHAT IF I DECIDE TO QUITE IN THE MIDDLE OF THE COURSE?</h3>
+                <p>If your plans change before the start of the course, you get your money back. But, in case of any
+                    changes
+                    when the course has already started, you can only switch to another course.</p>
+            </div>
+            <hr>
+        </div>
+    </section>
 </body>
 
 </html>
