--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 8 hours of training;</li>
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Easy to repeat at home;</li>
                 </ul>
+                <button>
+                    Select Course
+                </button>
             </article>
             <article class="about__course">
                 <h4 class="about__course__header">
@@ -131,6 +134,9 @@
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Interships included;</li>
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> A certificate is issued;</li>
                 </ul>
+                <button>
+                    Select Course
+                </button>
             </article>
             <article class="about__course">
                 <h4 class="about__course__header">
@@ -146,6 +152,9 @@
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Coffee roasting details;</li>
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Alternative brewing;</li>
                 </ul>
+                <button>
+                    Select Course
+                </button>
             </article>
             <article class="about__course">
                 <h4 class="about__course__header">
@@ -161,6 +170,9 @@
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> Making lush milk foam;</li>
                     <li><img width="25" src="img/checked__menu.svg" alt="checked menu"> 10 hours of training;</li>
                 </ul>
+                <button>
+                    Select Course
+                </button>
             </article>
         </section>
 
