--- a/index.html
+++ b/index.html
@@ -15,6 +15,57 @@
     </header>
 
     <main>
+        <!-- Olha Moroz-->
+        <section clas="make-coffe-like-a-pro">
+            <p clas="make-coffe-like-a-pro-title">Courses</p>
+            <h2 clas="make-coffe-like-a-pro">MAKE COFFEE LIKE A PRO</h2>
+            <p>Sign up for one of our professional courses.</p>
+
+            <div class="make-coffe-like-a-pro-courses">
+               
+                <div class="coffee-like-a-pro-at-home">
+                    <img width="260" src="img/pro_at_home.png" alt="coffee-like-a-pro-at-home">
+                    <h3 class="coffee-like-a-pro-at-home">COFFEE LIKE A PRO AT HOME</h3>
+                    <span class="coffee-like-a-pro-at-home">5 days</span>
+                    <span class="coffee-like-a-pro-at-home">$150</span>
+                    <span class="coffee-like-a-pro-at-home">5-10</span>
+                    <p class="make-coffe-like-a-pro">If find yourself asking too much at coffee shops, try making coffee professionally yourself. Become a pro coffee maker at home and then invite your friends for a chat to impress them with your coffee</p>
+                    <a href="contacts" class="button">Sign Up</a>
+                </div>
+
+                <div class="latte-art-cource">
+                    <img width="260" src="img/late_art.png" alt="latte-art-cource">
+                    <h3 class="latte-art-cource">LATE ART COURSE</h3>
+                    <span class="latte-art-cource">5 days</span>
+                    <span class="latte-art-cource">$150</span>
+                    <span class="latte-art-cource">5-10</span>
+                    <p class="make-coffe-like-a-pro">Turn each coffe you make into a masterpiece with our Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs</p>
+                    <a href="contacts" class="button">Sign Up</a>
+                </div>
+
+                <div class="barista-license-course">
+                    <img width="260" src="img/barista_licence.png" alt="barista-license-course">
+                    <h3 class="barista-license-course">BARISTA LICENSE COURSE</h3>
+                    <span class="barista-license-course">23 days</span>
+                    <span class="barista-license-course">$365</span>
+                    <span class="barista-license-course">5-10</span>
+                    <p class="make-coffe-like-a-pro">If you feel that you have to be the one making wholesome coffee, this crash course will give you the basics of working with a coffee machine, barista's responsibilities, and a tour around the kitchen.</p>
+                    <a href="contacts" class="button">Sign Up</a>
+                </div>
+
+                <div class="advanced-barista-course">
+                    <img width="260" src="img/advanced_barista.png" alt="advanced-barista-course">
+                    <h3 class="advanced-barista-course">ADVANCED BARISTA COURSE</h3>
+                    <span class="advanced-barista-course">14 DAYS</span>
+                    <span class="advanced-barista-course">$350</span>
+                    <span class="advanced-barista-course">3-7</span>
+                    <p class="make-coffe-like-a-pro">There is always space for improvement, even if you are an experienced barista. This 2-weeks course will improve your skills in coffee blending and coffee shop management. It's our best course for professianals.</p>
+                    <a href="contacts" class="button">Sign Up</a>
+                </div>
+            </div>
+        </section>
+
+
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making">
             <div class="masrer_making_img">
