--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
     <!-- Oleksii Ostapiuk -->
     <!--Olena Tarasova -->
     <!-- Tetyana Pasecnhyk-->
+    <!-- Yevhen Ostrovskyi-->
     <section class="about-our-courses">
         <div>
             <p>FAO</p>
