Add What our students say

--- a/index.html
+++ b/index.html
@@ -268,6 +268,18 @@
     <!-- Oleksii Ostapiuk -->
     <!--Olena Tarasova -->
     <!-- Yevhen Ostrovskyi-->
+    <section class="what__our__students__say"></section>
+    <div class="testimonials">
+        <p>Testimonials</p>
+    </div>
+    <div class="what our students say">
+        <p>What our students say</p>
+    </div>
+    <div class="happy review">
+        <p>We are happy with each review you leave.</p>
+    </div>
+        
+    
     <!-- Tetyana Pasecnhyk-->
     <section class="about-our-courses">
         <div>
