change section making h1

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="column__making-coffee">
                 <p>About</p>
-                <h1>Master Coffee Making</h1>
+                <h1>MASTER COFFEE MAKING</h1>
                 <p>At our school, you'll learn all coffee secrets.</p>
                 <p>Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
             </div>
