section with comment

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </article>
         </section>
 
-
+       <!-- Olena Kalamuniak-->
         <section class="remember_this">
             <img src="img/white-cloud-remember-this.svg" alt="">
             <div class="remember_this__features">
