Add Kateryna Petrenko

--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
             </div>
             <img class="remember_this__two-big-photos" src="img/remember_this__two-big-photos.png" width="500" alt="">
         </section>
+
+         <!-- Kateryna Petrenko-->
+         
     </main>
 
     <footer>
@@ -329,6 +332,7 @@
             <hr>
         </div>
     </section>
+
 </body>
 
 </html>
