--- a/index.html
+++ b/index.html
@@ -235,6 +235,30 @@
             </article>
         </section>
 
+
+<!--OleksiiOstapiuk-->
+
+<nav class="galery">
+    <div class="galery__imj-container">
+        <img width="400" src="imj/1-imj.png" alt="Barista Coffee">
+    </div>
+    <div class="galery__imj-container">
+        <img width="400" src="imj/2-imj.png" alt="Barista Coffee">
+    </div>
+    <div class="galery__imj-container">
+        <img width="400" src="imj/3-imj.png" alt="Barista Coffee">
+    </div>
+    <div class="galery__imj-container">
+        <img width="400" src="imj/4-imj.png" alt="Barista Coffee">
+    </div>
+    <div class="galery__imj-container">
+        <img width="400" src="imj/5-imj.png" alt="Barista Coffee">
+    </div>
+    <div class="galery__imj-container">
+        <img width="400" src="imj/6-imj.png" alt="Barista Coffee">
+    </div>
+        </nav>
+
        <!-- Olena Kalamuniak-->
         <section class="remember_this">
             <img src="img/white-cloud-remember-this.svg" alt="">
