linked css. created common.css, index-header.css, index-prising.css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barista School Website</title>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body>
 
-    <header>
+    <header class="header">
     <div class="header__logo">
         <img width="150" src="img/logo-barista.svg" alt="logo-barista">
     </div>
@@ -80,7 +81,7 @@
             <h1>COFFEE LAB SCHOOL</h1>
         </div>
         <div class="under__header">
-           <br class="header__br">
+           <hr class="header__hr">
         </div>
         <div class="under__header">
             Master your coffee skills, whether you're a barista or just a coffee fan.
