--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
     <!-- Tetyana Pasecnhyk-->
 
-    <section class="about-our-courses">
+    <section class="about__our__courses">
         <div class="about__course__info">
             <p>FAQ</p>
             <h2>ABOUT OUR COURSES</h2>
@@ -402,9 +402,9 @@
                 have any questions, please read this section or contact us directly.</p>
         </div>
         <div class="about__btn">
-            <div class="btn_choice">
-                <a href="#" class="btn_select_course">Select a Course</a>
-                <a href="#" class="btn_contact">Contact Us</a>
+            <div class="btn__choice">
+                <a href="#pricing" class="btn__select__course">Select a Course</a>
+                <a href="#" class="btn__contact">Contact Us</a>
             </div>
         </div>
         <div class="info__about__course">
