Created css index-about

--- a/index.html
+++ b/index.html
@@ -391,8 +391,9 @@
     <!-- Tetyana Pasecnhyk-->
 
     <section class="about__our__courses">
+        <div class="about__inner">
         <div class="about__course__info">
-            <p>FAQ</p>
+            <p class="little__title">FAQ</p>
             <h2>ABOUT OUR COURSES</h2>
             <hr>
             <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to apply in
@@ -455,6 +456,7 @@
                 </div>
             </div>
             <hr>
+        </div>
         </div>
     </section>
 
