--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <!-- Olena Kalamuniak-->
         <section class="our_fav_coffee_recipes">
-            <img src="img/white-cloud-remember-this.svg" alt="">
+            <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this">
             <div class="recipes">
                 <p>Recipes</p>
                 <h2>OUR FAVORITE COFFEE RECIPES</h2>
@@ -127,7 +127,7 @@
 
             <div class="photo_coffee">
                 <div class="Cold_Latte">
-                    <img src="img/photo_coffe_background.png" width="300" height="300" alt="">
+                    <img src="img/photo_coffe_background.png"  alt="photo_coffe_background">
                     <h4>COLD LATTE</h4>
                     <p class="text_photo_cold_latte">To make the number one summer coffee, mix espresso, milk, syrup,
                         and ice cubes. Blend everything until it looks like a one-piece liquid. Pour the mix into
@@ -135,7 +135,7 @@
                     <a href="#" class="button_cold_latte_open">Open</a>
                 </div>
                 <div class="Cheese_Dessert">
-                    <img src="img/photo_cheese_desert.jpg" width="300" height="300" alt="">
+                    <img src="img/photo_cheese_desert.jpg"  alt="photo_cheese_desert">
                     <h4>CHESSE DESSERT</h4>
                     <p class="text_photo_cheese_desert">Boil milk, add coffee and sugar. Mix it and cool it down. Put
                         cottage cheese in a bowl, add cold coffee, and whip it. Malt some peanuts and add them to the
@@ -143,7 +143,7 @@
                     <a href="#" class="button_cheese_dessert_open">Open</a>
                 </div>
             </div>
-            <img src="img/top-white-cloud-rt.svg" alt="">
+            <img src="img/top-white-cloud-rt.svg" alt="top-white-cloud-rt">
         </section>
 
 
@@ -237,7 +237,7 @@
 
        <!-- Olena Kalamuniak-->
         <section class="remember_this">
-            <img src="img/white-cloud-remember-this.svg" alt="">
+            <img src="img/white-cloud-remember-this.svg" alt="white-cloud-remember-this">
             <div class="remember_this__features">
                 <p>Features</p>
                 <h2>REMEMBER THIS</h2>
@@ -250,21 +250,21 @@
                     </div>
                 </div>
                 <div class="experienced_barista">
-                    <img src="img/experienced_barista.svg" width="30" alt="">
+                    <img src="img/experienced_barista.svg" alt="experienced_barista">
                     <div class="experienced_barista_text">
                         <h4>EXPERIENCED BARISTAS</h4>
                         <p>The ability to make truly delicious coffee comes with experience and hours of training.</p>
                     </div>
                 </div>
                 <div class="classic_drinks">
-                    <img src="img/classic_drinks.svg" width="30" alt="">
+                    <img src="img/classic_drinks.svg"  alt="classic_drinks">
                     <div class="classic_drinks_texr">
                         <h4>CLASSIC DRINKD ARE THE BASIS</h4>
                         <p>First, you should learn how to make good espresso and then continue with other drinks.</p>
                     </div>
                 </div>
             </div>
-            <img class="remember_this__two-big-photos" src="img/remember_this__two-big-photos.png" width="500" alt="">
+            <img class="remember_this__two-big-photos" src="img/remember_this__two-big-photos.png"  alt="remember_this__two-big-photos">
         </section>
     </main>
 
