--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <h2>REMEMBER THIS</h2>
                 <p class="few_things">A few things you should know about coffee making.</p>
                 <div class="coffe_making">
-                    <img src="img/logo_coffee_maker.svg" width="30" alt="">
+                    <img src="img/logo_coffee_maker.svg"  alt="logo_coffee_maker">
                     <div class="coffe_maker_text">
                         <h4>PROFESSIONAL EQUIPMENT</h4>
                         <p>Without a good espresso machine, you won't get delicious coffee.</p>
