--- a/index.html
+++ b/index.html
@@ -394,75 +394,82 @@
 
     <!-- Tetyana Pasecnhyk-->
 
+    
     <section class="about__our__courses">
-        <div class="about__inner">
-        <div class="about__course__info">
-            <p class="little__title">FAQ</p>
-            <h2>ABOUT OUR COURSES</h2>
-            <hr>
-            <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to apply in
-                advance.</p>
-            <p class="about__course__group">Our groups consist of 5-10 people on average. Most courses are held offline
-                or online + offline. If you
-                have any questions, please read this section or contact us directly.</p>
-        </div>
-        <div class="about__btn">
-            <div class="btn__choice">
-                <a href="#pricing" class="btn__select__course">Select a Course</a>
-                <a href="#" class="btn__contact">Contact Us</a>
+        <div class="about__our__inner">
+            <div class="about__course__info">
+                <p class="little__title">FAQ</p>
+                <h2>ABOUT OUR COURSES</h2>
+                <hr>
+                <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to apply
+                    in
+                    advance.</p>
+                <p class="about__course__group">Our groups consist of 5-10 people on average. Most courses are held
+                    offline
+                    or online + offline. If you
+                    have any questions, please read this section or contact us directly.</p>
+            </div>
+            <div class="about__btn">
+                <div class="btn__choice">
+                    <a href="#pricing" class="btn__select__course">Select a Course</a>
+                    <a href="#" class="btn__contact">Contact Us</a>
+                </div>
             </div>
         </div>
+        <!--accordion-->
         <div class="info__about__course">
             <div class="accordion__about">
-                <div class="accordion__about__quection">
-                    <h3>WHO ARE THESE COURSES FOR?</h3>
-                    <div class="accordion__about__icon">
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-1">
+                    <label class="accordion__triger" for="accordion-1">
+                        WHO ARE THESE COURSES FOR?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>We have different courses designed for beginners and
+                            professionals. It all depends on your skills and needs.
+                        </p>
                     </div>
                 </div>
-                <div class="accordion__about__answer">
-                    <p>We have different courses designed for beginners and
-                        professionals. It all depends on your skills and needs.</p>
-                </div>
-            </div>
-            <hr>
-            <div class="accordion__about">
-                <div class="accordion__about__quection">
-                    <h3>DO I NEED TO BUY AN ESPRESSO MACHINE TO STUDY?</h3>
-                    <div class="accordion__about__icon">
+                <hr>
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-2">
+                    <label class="accordion__triger" for="accordion-2">
+                        DO I NEED TO BUY AN ESPRESSO MACHINE TO STUDY?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still,
+                            during the courses, you'll use our equipment, so you don't need to buy anything to
+                            study.
+                        </p>
                     </div>
                 </div>
-                <div class="accordion__about__answer">
-                    <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still,
-                        during the courses, you'll use our equipment, so you don't need to buy anything to study.</p>
-                </div>
-            </div>
-            <hr>
-            <div class="accordion__about">
-                <div class="accordion__about__quection">
-                    <h3>DO YOU TEACH NEW WAYS OF BREWING COFFEE?</h3>
-                    <div class="accordion__about__icon">
+                <hr>
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-3">
+                    <label class="accordion__triger" for="accordion-3">
+                        DO YOU TEACH NEW WAYS OF BREWING COFFEE?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>Yes, you can master new techniques of brewing on our Advanced Barista Course.</p>
                     </div>
                 </div>
-                <div class="accordion__about__answer">
-                    <p>Yes, you can master new techniques of brewing on our Advanced Barista Course.</p>
-                </div>
-            </div>
-            <hr>
-            <div class="accordion__about">
-                <div class="accordion__about__quection">
-                    <h3>WHAT IF I DECIDE TO QUITE IN THE MIDDLE OF THE COURSE?</h3>
-                    <div class="accordion__about__icon">
+                <hr>
+                <div class="accordion__about__item">
+                    <input class="accordion__item__input" type="radio" name="accordion" id="accordion-4">
+                    <label class="accordion__triger" for="accordion-4">
+                        WHAT IF I DECIDE TO QUITE IN THE MIDDLE OF THE COURSE?
+                    </label>
+                    <div class="accordion__about__content">
+                        <p>If your plans change before the start of the course, you get your money back. But, in
+                            case of any changes when the course has already started, you can only switch to another
+                            course.</p>
                     </div>
                 </div>
-                <div class="accordion__about__answer">
-                    <p>If your plans change before the start of the course, you get your money back. But, in case of any
-                        changes when the course has already started, you can only switch to another course.</p>
-                </div>
+                <hr>
             </div>
-            <hr>
-        </div>
         </div>
     </section>
+
 
 </body>
 
