Added links for index-about.css

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="about__our__inner">
             <div class="about__course__info">
                 <p class="little__title">FAQ</p>
-                <h2>ABOUT OUR COURSES</h2>
+                <h2 class="about__title">ABOUT OUR COURSES</h2>
                 <hr>
                 <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to apply
                     in
