Added buttons for section ABOUT

--- a/index.html
+++ b/index.html
@@ -411,8 +411,9 @@
             </div>
             <div class="about__btn">
                 <div class="btn__choice">
-                    <a href="#pricing" class="btn__select__course">Select a Course</a>
-                    <a href="#" class="btn__contact">Contact Us</a>
+                    <span><a href="#pricing" class="btn__select__course">Select a Course</a>
+                    </span>
+                    <span><a href="#" class="btn__contact">Contact Us</a></span>
                 </div>
             </div>
         </div>
@@ -469,8 +470,6 @@
             </div>
         </div>
     </section>
-
-
 </body>
 
 </html>
