--- a/index.html
+++ b/index.html
@@ -394,13 +394,13 @@
 
     <!-- Tetyana Pasecnhyk-->
 
-    
+   
     <section class="about__our__courses">
         <div class="about__our__inner">
             <div class="about__course__info">
                 <p class="little__title">FAQ</p>
                 <h2 class="about__title">ABOUT OUR COURSES</h2>
-                <hr>
+                <div class="shot__line"></div>
                 <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to apply
                     in
                     advance.</p>
@@ -417,6 +417,7 @@
                 </div>
             </div>
         </div>
+        <div class="panell"></div>
         <!--accordion-->
         <div class="info__about__course">
             <div class="accordion__about">
@@ -470,6 +471,7 @@
             </div>
         </div>
     </section>
+    
 </body>
 
 </html>
