contacts first part

--- a/index.html
+++ b/index.html
@@ -398,7 +398,31 @@
     </main>
 
     <footer>
-
+        <section class="contacts">
+            <div>
+                <h3>Write us</h3>
+                <h1>Contacts</h1>
+            </div>    
+            <div>
+                <a href="number" class="button">+1(234) 567 89 00</a>
+            </div>
+            <div>
+                <a href="mail" class="button">coffeelab@emal.com</a>
+            </div>
+       </section>
+       <section class="contact input">
+            <form action="" method="">
+                <input type="text" name="full-name" required placeholder="Full Name*">
+                <input type="text" name="phone numbr" required placeholder="Phone Number*"> 
+                <input type="email" name="email" required placeholder="Email*">
+                <input type="text" name="course" required placeholder="Course*">
+                <input type="submit" value="Send"
+            </form>
+                <p>Full name*</p>
+                <p>Phone number*</p>
+                <p>Email*</p>
+                <p>Course*</p>
+       </section>
     </footer>
     <!-- Harasym Nazar-->
 
