--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making">
             <div class="masrer_making_img">
-                <img width="300" src="img/MasterCoffeeMaking.png" alt="">
+                <img width="300" src="img/master_coffee_making.png" alt="">
             </div>
             <div class="column__making-coffee">
                 <p>About</p>
-                <h1>MASTER COFFEE MAKING</h1>
+                <h2>MASTER COFFEE MAKING</h2>
                 <p>At our school, you'll learn all coffee secrets.</p>
                 <p>Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
             </div>
             <div class="column_making-learn-more">
-                <h2>PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h2>
+                <h3>PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h3>
                 <hr>
                 <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
@@ -209,6 +209,7 @@
                 </svg>
             </div>
         </section>
+        <section class="team"></section>
 
         <!-- Olena Kalamuniak-->
         <section class="our_fav_coffee_recipes">
