--- a/index.html
+++ b/index.html
@@ -416,12 +416,10 @@
                 <input type="text" name="phone numbr" required placeholder="Phone Number*"> 
                 <input type="email" name="email" required placeholder="Email*">
                 <input type="text" name="course" required placeholder="Course*">
-                <input type="submit" value="Send"
+                <input type="submit" value="Send">
             </form>
-                <p>Full name*</p>
-                <p>Phone number*</p>
-                <p>Email*</p>
-                <p>Course*</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d533.9195335179115!2d-122.43558443114438!3d37.76600783303852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e1d4afea219%3A0x329b14af40013c03!2zMTc1IENhc3RybyBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMTQsINCh0L_QvtC70YPRh9C10L3RliDQqNGC0LDRgtC4INCQ0LzQtdGA0LjQutC4!5e0!3m2!1suk!2sua!4v1662901398256!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                
        </section>
     </footer>
     <!-- Harasym Nazar-->
