Removed double cod

--- a/index.html
+++ b/index.html
@@ -444,60 +444,17 @@
 
    
     <section class="about__our__courses">
-<<<<<<< HEAD
-        <div class="about__inner">
-            <div class="about__course__info">
-                <p class="little__title">FAQ</p>
-                <h2>ABOUT OUR COURSES</h2>
-=======
         <div class="about__our__inner">
             <div class="about__course__info">
                 <p class="little__title">FAQ</p>
                 <h2 class="about__title">ABOUT OUR COURSES</h2>
-<<<<<<< HEAD
->>>>>>> 0bdb494545c4bb2d8ba33c2e911a5536cb8d5a99
-                <hr>
-=======
                 <div class="shot__line"></div>
->>>>>>> 5cf11af99c3b37482bc65f2c3c2d1d1519bca5ab
                 <p class="about__course__time">We run our courses approximately once in 2-3 months, so be sure to apply
                     in
                     advance.</p>
                 <p class="about__course__group">Our groups consist of 5-10 people on average. Most courses are held
-                    offline
-                    or online + offline. If you
+                    offline or online + offline. If you
                     have any questions, please read this section or contact us directly.</p>
-<<<<<<< HEAD
-            </div>
-            <div class="about__btn">
-                <div class="btn__choice">
-                    <a href="#pricing" class="btn__select__course">Select a Course</a>
-                    <a href="#" class="btn__contact">Contact Us</a>
-                </div>
-            </div>
-            <div class="info__about__course">
-                <div class="accordion__about">
-                    <div class="accordion__about__quection">
-                        <h3>WHO ARE THESE COURSES FOR?</h3>
-                        <div class="accordion__about__icon">
-                        </div>
-                    </div>
-                    <div class="accordion__about__answer">
-                        <p>We have different courses designed for beginners and
-                            professionals. It all depends on your skills and needs.</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="accordion__about">
-                    <div class="accordion__about__quection">
-                        <h3>DO I NEED TO BUY AN ESPRESSO MACHINE TO STUDY?</h3>
-                        <div class="accordion__about__icon">
-                        </div>
-                    </div>
-                    <div class="accordion__about__answer">
-                        <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still,
-                            during the courses, you'll use our equipment, so you don't need to buy anything to study.
-=======
             </div>
             <div class="about__btn">
                 <div class="btn__choice">
@@ -532,43 +489,20 @@
                         <p>A good coffee machine is a must for everyone who wants to make delicious coffee. Still,
                             during the courses, you'll use our equipment, so you don't need to buy anything to
                             study.
->>>>>>> 0bdb494545c4bb2d8ba33c2e911a5536cb8d5a99
                         </p>
                     </div>
                 </div>
                 <hr>
-<<<<<<< HEAD
-                <div class="accordion__about">
-                    <div class="accordion__about__quection">
-                        <h3>DO YOU TEACH NEW WAYS OF BREWING COFFEE?</h3>
-                        <div class="accordion__about__icon">
-                        </div>
-                    </div>
-                    <div class="accordion__about__answer">
-=======
                 <div class="accordion__about__item">
                     <input class="accordion__item__input" type="radio" name="accordion" id="accordion-3">
                     <label class="accordion__triger" for="accordion-3">
                         DO YOU TEACH NEW WAYS OF BREWING COFFEE?
                     </label>
                     <div class="accordion__about__content">
->>>>>>> 0bdb494545c4bb2d8ba33c2e911a5536cb8d5a99
                         <p>Yes, you can master new techniques of brewing on our Advanced Barista Course.</p>
                     </div>
                 </div>
                 <hr>
-<<<<<<< HEAD
-                <div class="accordion__about">
-                    <div class="accordion__about__quection">
-                        <h3>WHAT IF I DECIDE TO QUITE IN THE MIDDLE OF THE COURSE?</h3>
-                        <div class="accordion__about__icon">
-                        </div>
-                    </div>
-                    <div class="accordion__about__answer">
-                        <p>If your plans change before the start of the course, you get your money back. But, in case of
-                            any
-                            changes when the course has already started, you can only switch to another course.</p>
-=======
                 <div class="accordion__about__item">
                     <input class="accordion__item__input" type="radio" name="accordion" id="accordion-4">
                     <label class="accordion__triger" for="accordion-4">
@@ -578,14 +512,12 @@
                         <p>If your plans change before the start of the course, you get your money back. But, in
                             case of any changes when the course has already started, you can only switch to another
                             course.</p>
->>>>>>> 0bdb494545c4bb2d8ba33c2e911a5536cb8d5a99
                     </div>
                 </div>
                 <hr>
             </div>
         </div>
-    </section>
-    
+    </section>    
 </body>
 
 </html>
