moved pictures into a new folder and changed links in section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="make-coffe-like-a-pro-courses">
 
                 <div class="coffee-like-a-pro-at-home">
-                    <img width="260" src="img/pro_at_home.png" alt="coffee-like-a-pro-at-home">
+                    <img width="260" src="img/coffee_like_a_pro/pro_at_home.png" alt="coffee-like-a-pro-at-home">
                     <h3 class="coffee-like-a-pro-at-home">COFFEE LIKE A PRO AT HOME</h3>
                     <span class="coffee-like-a-pro-at-home">5 days</span>
                     <span class="coffee-like-a-pro-at-home">$150</span>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="latte-art-cource">
-                    <img width="260" src="img/late_art.png" alt="latte-art-cource">
+                    <img width="260" src="img/coffee_like_a_pro/late_art.png" alt="latte-art-cource">
                     <h3 class="latte-art-cource">LATE ART COURSE</h3>
                     <span class="latte-art-cource">5 days</span>
                     <span class="latte-art-cource">$150</span>
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="barista-license-course">
-                    <img width="260" src="img/barista_licence.png" alt="barista-license-course">
+                    <img width="260" src="img/coffee_like_a_pro/barista_licence.png" alt="barista-license-course">
                     <h3 class="barista-license-course">BARISTA LICENSE COURSE</h3>
                     <span class="barista-license-course">23 days</span>
                     <span class="barista-license-course">$365</span>
@@ -160,7 +160,7 @@
                 </div>
 
                 <div class="advanced-barista-course">
-                    <img width="260" src="img/advanced_barista.png" alt="advanced-barista-course">
+                    <img width="260" src="img/coffee_like_a_pro/advanced_barista.png" alt="advanced-barista-course">
                     <h3 class="advanced-barista-course">ADVANCED BARISTA COURSE</h3>
                     <span class="advanced-barista-course">14 DAYS</span>
                     <span class="advanced-barista-course">$350</span>
