--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
                 <div class="coffee-like-a-pro-at-home">
                     <img width="260" src="img/coffee_like_a_pro/pro_at_home.png" alt="coffee-like-a-pro-at-home">
                     <h3 class="coffee-like-a-pro-at-home">COFFEE LIKE A PRO AT HOME</h3>
+                    <img width="10" src="img/coffee_like_a_pro/calendar.svg" alt="calendar">
                     <span class="coffee-like-a-pro-at-home">5 days</span>
+                    <img width="10" src="img/coffee_like_a_pro/price.svg" alt="price">
                     <span class="coffee-like-a-pro-at-home">$150</span>
+                    <img width="10" src="img/coffee_like_a_pro/team.svg" alt="team">
                     <span class="coffee-like-a-pro-at-home">5-10</span>
                     <p class="make-coffe-like-a-pro">If find yourself asking too much at coffee shops, try making coffee
                         professionally yourself. Become a pro coffee maker at home and then invite your friends for a
@@ -138,8 +141,11 @@
                 <div class="latte-art-cource">
                     <img width="260" src="img/coffee_like_a_pro/late_art.png" alt="latte-art-cource">
                     <h3 class="latte-art-cource">LATE ART COURSE</h3>
+                    <img width="10" src="img/coffee_like_a_pro/calendar.svg" alt="calendar">
                     <span class="latte-art-cource">5 days</span>
+                    <img width="10" src="img/coffee_like_a_pro/price.svg" alt="price">
                     <span class="latte-art-cource">$150</span>
+                    <img width="10" src="img/coffee_like_a_pro/team.svg" alt="team">
                     <span class="latte-art-cource">5-10</span>
                     <p class="make-coffe-like-a-pro">Turn each coffe you make into a masterpiece with our Art Course.
                         You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much
@@ -150,8 +156,11 @@
                 <div class="barista-license-course">
                     <img width="260" src="img/coffee_like_a_pro/barista_licence.png" alt="barista-license-course">
                     <h3 class="barista-license-course">BARISTA LICENSE COURSE</h3>
+                    <img width="10" src="img/coffee_like_a_pro/calendar.svg" alt="calendar">
                     <span class="barista-license-course">23 days</span>
+                    <img width="10" src="img/coffee_like_a_pro/price.svg" alt="price">
                     <span class="barista-license-course">$365</span>
+                    <img width="10" src="img/coffee_like_a_pro/team.svg" alt="team">
                     <span class="barista-license-course">5-10</span>
                     <p class="make-coffe-like-a-pro">If you feel that you have to be the one making wholesome coffee,
                         this crash course will give you the basics of working with a coffee machine, barista's
@@ -162,8 +171,11 @@
                 <div class="advanced-barista-course">
                     <img width="260" src="img/coffee_like_a_pro/advanced_barista.png" alt="advanced-barista-course">
                     <h3 class="advanced-barista-course">ADVANCED BARISTA COURSE</h3>
+                    <img width="10" src="img/coffee_like_a_pro/calendar.svg" alt="calendar">
                     <span class="advanced-barista-course">14 DAYS</span>
+                    <img width="10" src="img/coffee_like_a_pro/price.svg" alt="price">
                     <span class="advanced-barista-course">$350</span>
+                    <img width="10" src="img/coffee_like_a_pro/team.svg" alt="team">
                     <span class="advanced-barista-course">3-7</span>
                     <p class="make-coffe-like-a-pro">There is always space for improvement, even if you are an
                         experienced barista. This 2-weeks course will improve your skills in coffee blending and coffee
