Added filter for img

--- a/index.html
+++ b/index.html
@@ -521,9 +521,8 @@
     </section>
 
     <!-- Tetyana Pasecnhyk-->
-
-
     <section class="about__our__courses">
+        <div class="dark__filter">
         <div class="about__our__inner">
             <div class="about__course__info">
                 <p class="little__title">FAQ</p>
@@ -596,6 +595,7 @@
                 </div>
                 <hr>
             </div>
+        </div>
         </div>
     </section>
 </body>
