--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
                 <img width="300" src="img/master_coffee_making.png" alt="">
             </div>
             <div class="column__making-coffee">
-                <p>About</p>
+                <p class="fonts_logo_making">About</p>
                 <h2>MASTER COFFEE MAKING</h2>
                 <p>At our school, you'll learn all coffee secrets.</p>
                 <p>Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
             </div>
             <div class="column_making-learn-more">
                 <h3>PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h3>
-                <hr>
+                <hr class="hr_making_team">
                 <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
                     even more about this hot and energizing drink</p>
@@ -208,7 +208,7 @@
         </section>
         <section class="video">
             <div class="video_make-coffee">
-                <p class="video_logo">Video</p>
+                <p class="fonts_logo_making">Video</p>
                 <h2 class="video__text">HERE'S HOW WE STUDY AND MAKE COFFEE</h2>
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                     viewBox="0 0 96 96" x="0px" y="0px" style="max-width:70px">
@@ -223,9 +223,9 @@
         </section>
         <section class="team">
             <div>
-                <p>Team</p>
+                <p class="fonts_logo_making">Team</p>
                 <h2>MEET OUR TEAM</h2>
-                <hr>
+                <hr class="">
                 <p>These are our baristas that are going to teach you all the magic:</p>
             </div>
             <div class="team_cards">
@@ -233,7 +233,7 @@
                     <img width="300" src="img/photo_team.png" alt="team">
                     <p>Coffee guru</p>
                     <h2>GARRY BEE</h2>
-                    <hr>
+                    <hr class="">
                     <p>Garry is a real coffee chef and enthusiast as he makes new recipes, which he will share with you
                         on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
                         coffee, ask Garry.</p>
@@ -243,7 +243,7 @@
                     <img width="300" src="img/photo_team_img.png" alt="our_team">
                     <p>Latte master</p>
                     <h2>ANNA LENO</h2>
-                    <hr>
+                    <hr class="">
                     <p>Anna is in charge of the aspiring coffee artists. You will learn the different techniques of
                         coffee art, and, through her lessons, you will learn how to make a perfect canvas on the latte
                         foam.</p>
