add section indexmakingteam.css

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div>
                 <p class="fonts_logo_making">Team</p>
                 <h2>MEET OUR TEAM</h2>
-                <hr class="">
+                <hr class="hr_logo_team">
                 <p>These are our baristas that are going to teach you all the magic:</p>
             </div>
             <div class="team_cards">
