--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making">
             <div class="masrer_making_img">
-                <img width="300" src="img/master_coffee_making.png" alt="">
+                <img src="img/master_coffee_making.png" alt="">
             </div>
             <div class="column__making-coffee">
                 <p class="fonts_logo_making">About</p>
@@ -203,16 +203,16 @@
                 <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
                     even more about this hot and energizing drink</p>
-                <a href="#" class="btn_making_learn_more">Learn More</a>
+                <a href="#pricing" class="btn_making_learn_more">Learn More</a>
             </div>
         </section>
         <section class="video">
             <div class="video_make-coffee">
                 <p class="fonts_logo_making">Video</p>
                 <h2 class="video__text">HERE'S HOW WE STUDY AND MAKE COFFEE</h2>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                <svg class="svg_video" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                     viewBox="0 0 96 96" x="0px" y="0px" style="max-width:70px">
-                    <path
+                    <path 
                         d="M38 68.476c-0.328 0-0.652-0.080-0.948-0.244-0.648-0.34-1.052-1.020-1.052-1.756v-36.952c0-0.736 0.404-1.416 1.052-1.752 0.644-0.352 1.432-0.32 2.048 0.088l28 18.476c0.56 0.368 0.9 0.992 0.9 1.664s-0.336 1.304-0.9 1.672l-28 18.476c-0.332 0.22-0.716 0.328-1.1 0.328zM40 33.244v29.524l22.368-14.756-22.368-14.768z"
                         fill="currentColor" style=""></path>
                     <path
@@ -230,7 +230,7 @@
             </div>
             <div class="team_cards">
                 <article class="card_team">
-                    <img width="300" src="img/photo_team.png" alt="team">
+                    <img src="img/photo_team.png" alt="team">
                     <p>Coffee guru</p>
                     <h2>GARRY BEE</h2>
                     <hr class="">
@@ -240,7 +240,7 @@
                     <a href=""></a>
                 </article>
                 <article class="our_team_card">
-                    <img width="300" src="img/photo_team_img.png" alt="our_team">
+                    <img src="img/photo_team_img.png" alt="our_team">
                     <p>Latte master</p>
                     <h2>ANNA LENO</h2>
                     <hr class="">
@@ -250,7 +250,7 @@
                     <a href=""></a>
                 </article>
                 <article class="meet_our_team_card">
-                    <img width="300" src="img/photo_team_image.png" alt="meet_our_team">
+                    <img src="img/photo_team_image.png" alt="meet_our_team">
                     <p>Owner of a bar</p>
                     <h2>TOMAS HETCH</h2>
                     <hr>
