--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
             </div>
             <div class="column__making-coffee">
                 <p class="fonts_logo_making">About</p>
-                <h2>MASTER COFFEE MAKING</h2>
+                <h2 class="h2_master_coffee_making">MASTER COFFEE MAKING</h2>
                 <p>At our school, you'll learn all coffee secrets.</p>
                 <p>Coffee Lab School gives a real-life experience of a coffee shop with an internship.</p>
             </div>
             <div class="column_making-learn-more">
-                <h3>PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h3>
+                <h3 class="h3_master_coffee_making">PROFESSIONAL COUSES ARE NOW AVAILABLE FOR ALL COFFEE FANS IN NEW YORK</h3>
                 <hr class="hr_making_team">
                 <p>Coffee Lab School is an educational playground for people who cast their lot with coffee. If you own
                     a coffee shop, work as a barista, or you’re just a coffee fan, it is a place where you can learn
@@ -224,7 +224,7 @@
         <section class="team">
             <div>
                 <p class="fonts_logo_making">Team</p>
-                <h2>MEET OUR TEAM</h2>
+                <h2 class="h2_team">MEET OUR TEAM</h2>
                 <hr class="hr_logo_team">
                 <p>These are our baristas that are going to teach you all the magic:</p>
             </div>
