change section index-team

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <!-- Natalia Danylovych -->
         <section class="master-coffe-making">
             <div class="masrer_making_img">
-                <img src="img/master_coffee_making.png" alt="">
+                <img class="image__making" src="img/master_coffee_making.png" alt="image__making">
             </div>
             <div class="column__making-coffee">
                 <p class="fonts_logo_making">About</p>
@@ -208,7 +208,7 @@
         </section>
         <section class="video">
             <div class="video_make-coffee">
-                <p class="fonts_logo_making">Video</p>
+                <p class="fonts_logo_video">Video</p>
                 <h2 class="video__text">HERE'S HOW WE STUDY AND MAKE COFFEE</h2>
                 <svg class="svg_video" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                     viewBox="0 0 96 96" x="0px" y="0px" style="max-width:70px">
@@ -223,7 +223,7 @@
         </section>
         <section class="team">
             <div>
-                <p class="fonts_logo_making">Team</p>
+                <p class="fonts_logo_team">Team</p>
                 <h2 class="h2_team">MEET OUR TEAM</h2>
                 <hr class="hr_logo_team">
                 <p>These are our baristas that are going to teach you all the magic:</p>
