--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
                 <p class="fonts_logo_team">Team</p>
                 <h2 class="h2_team">MEET OUR TEAM</h2>
                 <hr class="hr_logo_team">
-                <p>These are our baristas that are going to teach you all the magic:</p>
+                <p class="p_font_team">These are our baristas that are going to teach you all the magic:</p>
             </div>
             <div class="team_cards">
                 <article class="card_team">
-                    <img src="img/photo_team.png" alt="team">
+                    <img class="img_team" src="img/photo_team.png" alt="team">
                     <p>Coffee guru</p>
                     <h2>GARRY BEE</h2>
                     <hr class="">
@@ -240,7 +240,7 @@
                     <a href=""></a>
                 </article>
                 <article class="our_team_card">
-                    <img src="img/photo_team_img.png" alt="our_team">
+                    <img class="img_team" src="img/photo_team_img.png" alt="our_team">
                     <p>Latte master</p>
                     <h2>ANNA LENO</h2>
                     <hr class="">
@@ -250,7 +250,7 @@
                     <a href=""></a>
                 </article>
                 <article class="meet_our_team_card">
-                    <img src="img/photo_team_image.png" alt="meet_our_team">
+                    <img class="img_team" src="img/photo_team_image.png" alt="meet_our_team">
                     <p>Owner of a bar</p>
                     <h2>TOMAS HETCH</h2>
                     <hr>
