add section making

--- a/index.html
+++ b/index.html
@@ -231,30 +231,30 @@
             <div class="team_cards">
                 <article class="card_team">
                     <img class="img_team" src="img/photo_team.png" alt="team">
-                    <p>Coffee guru</p>
-                    <h2>GARRY BEE</h2>
-                    <hr class="">
-                    <p>Garry is a real coffee chef and enthusiast as he makes new recipes, which he will share with you
+                    <em>Coffee guru</em>
+                    <h2 class="h2_team">GARRY BEE</h2>
+                    <hr class="hr_team">
+                    <p class="team_fonts_p">Garry is a real coffee chef and enthusiast as he makes new recipes, which he will share with you
                         on our course. If you want to make a perfect coffee blend and learn the secrets of delicious
                         coffee, ask Garry.</p>
                     <a href=""></a>
                 </article>
                 <article class="our_team_card">
                     <img class="img_team" src="img/photo_team_img.png" alt="our_team">
-                    <p>Latte master</p>
-                    <h2>ANNA LENO</h2>
-                    <hr class="">
-                    <p>Anna is in charge of the aspiring coffee artists. You will learn the different techniques of
+                    <em>Latte master</em>
+                    <h2 class="h2_team">ANNA LENO</h2>
+                    <hr class="hr_team">
+                    <p class="team_fonts_p">Anna is in charge of the aspiring coffee artists. You will learn the different techniques of
                         coffee art, and, through her lessons, you will learn how to make a perfect canvas on the latte
                         foam.</p>
                     <a href=""></a>
                 </article>
                 <article class="meet_our_team_card">
                     <img class="img_team" src="img/photo_team_image.png" alt="meet_our_team">
-                    <p>Owner of a bar</p>
-                    <h2>TOMAS HETCH</h2>
-                    <hr>
-                    <p>Tomas is a veteran bar owner. If you want your coffee place to be a home to your clients, Tomas
+                    <em>Owner of a bar</em>
+                    <h2 class="h2_team">TOMAS HETCH</h2>
+                    <hr class="hr_team">
+                    <p class="team_fonts_p">Tomas is a veteran bar owner. If you want your coffee place to be a home to your clients, Tomas
                         will teach you how to structure a coffee business from a big ambition to a famous go-to venue.
                     </p>
                     <a href=""></a>
